# FormGenX

./: .gitignore  README.md  config.json  convert_to_axolotl_vl.py  dataGenFunctions.py  editor.py  generator.py  main.py  pyproject.toml
examples/: README.md
examples/with_stempel/: config.json
examples/without_stempel/: config.json  example.json
stempel_module/: overlay_renderer.py  paper_effects.py  stamp_effects.py  stamp_models.py  stamp_presets.py  stamp_renderer.py
tests/: test_stamp_generation.py
