[project]
name = "formular-test-data-generator"
version = "0.1.0"
description = "Open-source form template editor and synthetic data generator for ML, OCR, and document AI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "pillow>=10.4.0",
]
